Change loader background #84, Fix Layout bug in the "Most active pair of zones" block #82

--- a/src/pages/Map/components/Loader/index.module.css
+++ b/src/pages/Map/components/Loader/index.module.css
@@ -11,6 +11,7 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  background-color: #130e26;
 }
 .sk-chasing-dots {
   width: var(--spinkit-size);
